--- a/exercises/index.html
+++ b/exercises/index.html
@@ -1,31 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <title>SRE Enablement</title>
+  <title>Document</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Training material for the Red Hat Open Innovation Labs">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/buble.css">
-  <link rel="stylesheet" href="./custom.css">
+  <meta name="description" content="Description">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
 </head>
-
 <body>
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: 'SRE Enablement & Lab Exercises',
+        name: 'SRE Enablement & Lab Exercises',
       repo: 'https://github.com/rht-labs/sre-enablement-docs',
       loadSidebar: true,
+      subMaxLevel: 0,
+      sidebarDisplayLevel: 0,
       alias: {
       '/.*/_sidebar.md': '/_sidebar.md'
       },
       themeColor: '#CC0000',
-      subMaxLevel: 5,
-      auto2top: true,
-      search: 'auto',
-      notFoundPage: 'notThe404.md',
       copyCode: {
         buttonText : '✂️',
         errorText  : '😔',
@@ -33,16 +28,13 @@
       }
     }
   </script>
-  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-  <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
-  <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
+  <!-- Docsify v4 -->
+  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-bash.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-javascript.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-groovy.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-yaml.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-json.min.js"></script>
-  <script src="//unpkg.com/docsify/lib/plugins/zoom-image.min.js"></script>
-  <script src="https://unpkg.com/docsify-copy-code@2"></script>
+  <script src="//unpkg.com/prismjs/components/prism-groovy.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
 
   <style>
